// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline vis toExpressionAst function should match basic snapshot 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "expression": Array [
          ".opensearch(*)",
        ],
        "interval": Array [
          "auto",
        ],
      },
      "function": "timeline_vis",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;

exports[`timeline vis toExpressionAst function should not escape single quotes 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "expression": Array [
          ".opensearch(index=my*,timefield=\\"date\\",split='test field:3',metric='avg:value')",
        ],
        "interval": Array [
          "auto",
        ],
      },
      "function": "timeline_vis",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;
